; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari_ps2.c_timer_initialize.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_atari_ps2.c_timer_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@T0_MODE = common dso_local global i32 0, align 4
@INTC_TIM0 = common dso_local global i32 0, align 4
@t0_interrupt_handler = common dso_local global i32 0, align 4
@t0_interrupt_id = common dso_local global i8* null, align 8
@T0_COUNT = common dso_local global i64 0, align 8
@T1_MODE = common dso_local global i64 0, align 8
@INTC_TIM1 = common dso_local global i32 0, align 4
@t1_interrupt_handler = common dso_local global i32 0, align 4
@t1_interrupt_id = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @timer_initialize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_initialize() #0 {
  store i32 0, i32* @T0_MODE, align 4
  %1 = load i32, i32* @INTC_TIM0, align 4
  %2 = load i32, i32* @t0_interrupt_handler, align 4
  %3 = call i8* @AddIntcHandler(i32 %1, i32 %2, i32 0)
  store i8* %3, i8** @t0_interrupt_id, align 8
  %4 = load i32, i32* @INTC_TIM0, align 4
  %5 = call i32 @EnableIntc(i32 %4)
  store i64 0, i64* @T0_COUNT, align 8
  store i32 642, i32* @T0_MODE, align 4
  store i64 0, i64* @T1_MODE, align 8
  %6 = load i32, i32* @INTC_TIM1, align 4
  %7 = load i32, i32* @t1_interrupt_handler, align 4
  %8 = call i8* @AddIntcHandler(i32 %6, i32 %7, i32 0)
  store i8* %8, i8** @t1_interrupt_id, align 8
  %9 = load i32, i32* @INTC_TIM1, align 4
  %10 = call i32 @EnableIntc(i32 %9)
  ret void
}

declare dso_local i8* @AddIntcHandler(i32, i32, i32) #1

declare dso_local i32 @EnableIntc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
